--- a/trunk/0xCAFE_Test/AndroidManifest.xml
+++ b/trunk/0xCAFE_Test/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.code.zeroxcafe.test"
+    package="com.googlecode.zeroxcafe.test"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -8,7 +8,7 @@
 
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="com.google.code.zeroxcafe" />
+        android:targetPackage="com.googlecode.zeroxcafe" />
 
     <application
         android:icon="@drawable/ic_launcher"
